# NovoProteinAI

./: .env.example  .gitignore  AGENTVERSE_README.md  DEVIN_TASKS.md  IMPLEMENTATION_STATUS.md  LICENSE  MCP_CONFIG.md  PLUGIN_INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.yaml.example  devin_client.py  mcp_config.json  pyproject.toml  register_agent.py  requirements.txt  research_agent.py  setup.sh  skills-lock.json  start_agent.sh  test_client.py  verify_install.py  visualize.py
pymol_mcp/: __init__.py  client.py  config.py  server.py  tools.py
pymol_plugin/: __init__.py
pymol_uagent/: __init__.py  agent.py  mcp_bridge.py  protocols.py  validators.py
redis_interactions/: .env.example  README.md  __init__.py  _conn_check.py  _smoke_test.py  chunking.py  embeddings.py  ingest.py  redis_client.py  redis_connect.py  requirements.txt  schema.py  search.py
research_paper_interactions/: .env.example  __init__.py  _conn_check.py  ingest.py  pubmed.py  research_paper_interactions.py
runpod_gui/: Dockerfile  README.md  handler.py
src/: __init__.py  agent_graph.py  main.py  register_agent.py  relay.py  research_agent.py  runpod_gui.py
tests/: __init__.py  integration_test.py  test_client.py  test_load_structure.py  test_nlp_parser.py  test_protocol.py  test_pubmed_parsing.py  test_research_agent.py  test_runpod_gui.py  test_tools.py
