[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymol-mcp-bridge"
version = "0.1.0"
description = "MCP bridge exposing PyMOL as typed tools to LLM agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NovoProteinAI"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "uagents>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
pymol-mcp = "pymol_mcp.server:main"

[tool.setuptools.packages.find]
include = ["pymol_mcp*", "pymol_uagent*"]
exclude = ["tests*", "pymol_plugin*"]
